--- a/_layouts/ds2002.html
+++ b/_layouts/ds2002.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <title>{{ page.title | escape }} | {{ site.title | escape }}</title>
-    <meta name="description" content="{{ site.description | escape }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Load the theme's default CSS, plus our custom CSS -->
-    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <title>{{ page.title | escape }} | {{ site.title | escape }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Link your custom CSS -->
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+</head>
+
   <body>
     <div class="wrapper">
       <header>
