--- a/_layouts/ds2002.html
+++ b/_layouts/ds2002.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Link your custom CSS -->
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ https://fourfeatherz.github.io/DS2002S25/'}}">
 </head>
 
   <body>
