--- a/_layouts/ds2002.html
+++ b/_layouts/ds2002.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Link your custom CSS -->
-  <link rel="stylesheet" href="{{ https://fourfeatherz.github.io/DS2002S25/'}}">
+  
+  <link rel="stylesheet" href="https://fourfeatherz.github.io//DS2002S25/assets/css/style.css">
 </head>
 
   <body>
